Revision history for Perl module group Pod::Perldoc
                                        Time-stamp: "2004-11-30 13:27:01 AST"

2007-08-16  
	* Release 3.14_01 -- bleedperl changes:
	+ #31628: a Gentoo patch
	+ #27878: warn when -f, -q ignore extra arguments
	+ #26191: new switch -L
	
2004-11-30  Sean M. Burke  sburke@cpan.org
	* Release 3.14 -- bugfix for Cygwin

	* Matt Johnson sends in two patches to accomodate Cygwin.
	Accepted.

	* Also changing pathsep for IS_MSWin32 || IS_Dos temp files
	from '/' to '\'.

2004-04-09  Sean M. Burke  sburke@cpan.org
	* Release 3.13 -- minor bugfixes

	Ken Willians notes that Pod::Perldoc::ToMan breaks when the
	pod2man program isn't in $Config{'scriptdirexp'}.  So I make it
	look there first, but then fall back to not specifying where it
	should be found.

	James Michael Du Pont notes that Carp::croak isn't always loaded
	by all versions of the modules perldoc uses.  So I add an explicit
	"require Carp::croak".

	I add t/01_about_verbose.t just to give more diagnostics.

2003-10-21  Sean M. Burke  sburke@cpan.org
	* Release 3.12 -- tweak for Linux man.
	
	Slaven Rezic notes that Makefile.PL should say INSTALLDIRS => "perl"
	for perl versions 5.8.1 and newer, to make installation work right
	on those perls.  Change made.

	Slaven Rezic notes that -q was generating an erroneous =over 8 ...
	around the sliced text from perlfaq searched via -q.  Change made
	-- this =over 8 ... =back stuff is now generated only if you're
	calling perldoc with -f (for perlfunc sections).
	
	
2003-10-12  Sean M. Burke  sburke@cpan.org
	* Release 3.11 -- tweak for Linux man.
	Brendan O'Dea provides code for Pod/Perldoc/ToMan.pm to sets -rLL
	to what stty reports for terminal column width.
	
	
2003-09-10  Sean M. Burke  sburke@cpan.org
	* Release 3.10 -- bugfix for cygwin
	Jari Aalto notes a problem with cygwin and the containspod routine
	-- cygwin apparently pretends there's an executable $filename file