@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Pod-Perldoc
-version:             3.14_01
+version:             3.14_02
 abstract:            look up Perl documentation in Pod format
-license:             ~
+license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.36
 distribution_type:   module
 requires:     
